# logiko

./: Cargo.toml  Dioxus.toml  data.json  flake.nix  notes.md  readme.md
logic_check/: Cargo.toml  lib.rs  verify.rs
public/: base-style.css
src/: main.rs  style.scss
src/gui/: info_screen.rs  keyboard.rs  mod.rs  sub_proof.rs  win_screen.rs
src/logic/: mod.rs  verify.rs
src/util/: mod.rs
