[package]
name = "logic"
version = "1.7.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dioxus = { version = "0.5.6", features = ["web"] }
dioxus-fullstack = { version = "0.5.0-alpha.2" }
dioxus-logger = "0.5.1"
grass = { git = "https://github.com/connorskees/grass.git", default-features = false, features = ["macro"] }
log = "0.4.22"
serde = { workspace = true }
serde_json = "1.0.122"
wasmtimer = "0.2.0"
fitch_syntax = { git = "https://github.com/adelhult/fitch/" }
logic_check = { path = "./logic_check" }

[workspace.dependencies]
itertools = "0.13.0"
serde = { version = "1.0.204", features = ["derive"] }
